--- a/historical-data-hourly-to-annual.ipynb
+++ b/historical-data-hourly-to-annual.ipynb
@@ -6,7 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import numpy as np"
    ]
   }
  ],
@@ -26,7 +27,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.11.1"
   },
   "orig_nbformat": 4
  },
