--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -5295,7 +5295,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Random Forest Variable Importance (not finished)"
+    "## Random Forest Variable Importance"
    ]
   },
   {
