--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -15,6 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Import libraries\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
@@ -27,6 +28,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Read CSV and drop unnamed columns\n",
     "df = pd.read_csv('Yield_Weather.csv')\n",
     "df = df.drop(columns=['Unnamed: 0'])"
    ]
@@ -471,6 +473,7 @@
     }
    ],
    "source": [
+    "# Display histogram of a specific column\n",
     "plt.hist(df['dewpoint_2m (°C)'])\n",
     "plt.show()"
    ]
@@ -521,6 +524,7 @@
     }
    ],
    "source": [
+    "# Display histogram of a specific column\n",
     "plt.hist(df.drop(columns=['Location', 'Year', 'weathercode (wmo code)']))\n",
     "plt.show()"
    ]
@@ -570,6 +574,7 @@
     }
    ],
    "source": [
+    "# Display datatypes\n",
     "df.dtypes"
    ]
   },
@@ -579,6 +584,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Fill missing NaN values\n",
     "df['Yield (mt/ha)'] = df['Yield (mt/ha)'].fillna(0)"
    ]
   },
@@ -963,6 +969,7 @@
     }
    ],
    "source": [
+    "# Getting an overview of the data\n",
     "df['Production (mt)'].describe()"
    ]
   },
@@ -984,6 +991,7 @@
     }
    ],
    "source": [
+    "# Print the outliers, mean and standard deviation in the Production (mt)\n",
     "mean = np.mean(df['Production (mt)'])\n",
     "std = np.std(df['Production (mt)'])\n",
     " \n",
@@ -1005,6 +1013,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Handle and cap the outliers in the Production(mt) column by setting upper and lower limits\n",
     "upper_limit = df['Production (mt)'].mean() + 3*df['Production (mt)'].std()\n",
     "lower_limit = df['Production (mt)'].mean() - 3*df['Production (mt)'].std()\n",
     "\n",
@@ -1079,6 +1088,7 @@
     }
    ],
    "source": [
+    "# Getting an overview of the data\n",
     "df['Area (ha)'].describe()"
    ]
   },
@@ -1100,6 +1110,7 @@
     }
    ],
    "source": [
+    "# Print the outliers, mean and standard deviation in the Area(ha)\n",
     "mean = np.mean(df['Area (ha)'])\n",
     "std = np.std(df['Area (ha)'])\n",
     " \n",
@@ -1120,6 +1131,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Handle and cap the outliers in the Area(ha) column by setting upper and lower limits\n",
     "upper_limit = df['Area (ha)'].mean() + 3*df['Area (ha)'].std()\n",
     "lower_limit = df['Area (ha)'].mean() - 3*df['Area (ha)'].std()\n",
     "\n",
@@ -1194,6 +1206,7 @@
     }
    ],
    "source": [
+    "# Getting an overview of the data\n",
     "df['Yield (mt/ha)'].describe()"
    ]
   },
@@ -1215,6 +1228,7 @@
     }
    ],
    "source": [
+    "# Print the outliers, mean and standard deviation in the Yield(mt/ha)\n",
     "mean = np.mean(df['Yield (mt/ha)'])\n",
     "std = np.std(df['Yield (mt/ha)'])\n",
     " \n",
@@ -1235,6 +1249,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Handle and cap the outliers in the Yield(mt/ha) column by setting upper and lower limits\n",
     "upper_limit = df['Yield (mt/ha)'].mean() + 3*df['Yield (mt/ha)'].std()\n",
     "lower_limit = df['Yield (mt/ha)'].mean() - 3*df['Yield (mt/ha)'].std()\n",
     "\n",
@@ -1357,6 +1372,7 @@
     }
    ],
    "source": [
+    "# Getting an overview of the data\n",
     "df['temperature_2m (°C)'].describe()"
    ]
   },
@@ -1378,6 +1394,7 @@
     }
    ],
    "source": [
+    "# Print the outliers, mean and standard deviation in the temperature_2m (°C)\n",
     "mean = np.mean(df['temperature_2m (°C)'])\n",
     "std = np.std(df['temperature_2m (°C)'])\n",
     " \n",
@@ -1424,6 +1441,7 @@
     }
    ],
    "source": [
+    "# Getting an overview of the data\n",
     "df['relativehumidity_2m (%)'].describe()"
    ]
   },
@@ -1445,6 +1463,7 @@
     }
    ],
    "source": [
+    "# Print the outliers, mean and standard deviation in the relativehumidity_2m (%)\n",
     "mean = np.mean(df['relativehumidity_2m (%)'])\n",
     "std = np.std(df['relativehumidity_2m (%)'])\n",
     " \n",
@@ -1465,6 +1484,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Handle and cap the outliers in the relativehumidity_2m (%) column by setting upper and lower limits\n",
     "upper_limit = df['relativehumidity_2m (%)'].mean() + 3*df['relativehumidity_2m (%)'].std()\n",
     "lower_limit = df['relativehumidity_2m (%)'].mean() - 3*df['relativehumidity_2m (%)'].std()\n",
     "\n",
@@ -1539,6 +1559,7 @@
     }
    ],
    "source": [
+    "# Getting an overview of the data\n",
     "df['dewpoint_2m (°C)'].describe()"
    ]
   },
@@ -1560,6 +1581,7 @@
     }
    ],
    "source": [
+    "# Print the outliers, mean and standard deviation in the dewpoint_2m (°C)\n",
     "mean = np.mean(df['dewpoint_2m (°C)'])\n",
     "std = np.std(df['dewpoint_2m (°C)'])\n",
     " \n",
@@ -1606,6 +1628,7 @@
     }
    ],
    "source": [
+    "# Getting an overview of the data\n",
     "df['rain (mm)'].describe()"
    ]
   },
@@ -1627,6 +1650,7 @@
     }
    ],
    "source": [
+    "# Print the outliers, mean and standard deviation in the rain(mm)\n",
     "mean = np.mean(df['rain (mm)'])\n",
     "std = np.std(df['rain (mm)'])\n",
     " \n",
@@ -1647,6 +1671,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Handle and cap the outliers in the rain(mm) column by setting upper and lower limits\n",
     "upper_limit = df['rain (mm)'].mean() + 3*df['rain (mm)'].std()\n",
     "lower_limit = df['rain (mm)'].mean() - 3*df['rain (mm)'].std()\n",
     "\n",
@@ -1721,6 +1746,7 @@
     }
    ],
    "source": [
+    "# Getting an overview of the data\n",
     "df['surface_pressure (hPa)'].describe()"
    ]
   },
@@ -1742,6 +1768,7 @@
     }
    ],
    "source": [
+    "# Print the outliers, mean and standard deviation in the surface_pressure (hPa)\n",
     "mean = np.mean(df['surface_pressure (hPa)'])\n",
     "std = np.std(df['surface_pressure (hPa)'])\n",
     " \n",
@@ -1788,6 +1815,7 @@
     }
    ],
    "source": [
+    "# Getting an overview of the data\n",
     "df['cloudcover (%)'].describe()"
    ]
   },
@@ -1809,6 +1837,7 @@
     }
    ],
    "source": [
+    "# Print the outliers, mean and standard deviation in the cloudcover (%)\n",
     "mean = np.mean(df['cloudcover (%)'])\n",
     "std = np.std(df['cloudcover (%)'])\n",
     " \n",
@@ -1855,6 +1884,7 @@
     }
    ],
    "source": [
+    "# Getting an overview of the data\n",
     "df['et0_fao_evapotranspiration (mm)'].describe()"
    ]
   },
@@ -1876,6 +1906,7 @@
     }
    ],
    "source": [
+    "# Print the outliers, mean and standard deviation in the et0_fao_evapotranspiration (mm\n",
     "mean = np.mean(df['et0_fao_evapotranspiration (mm)'])\n",
     "std = np.std(df['et0_fao_evapotranspiration (mm)'])\n",
     " \n",
@@ -1896,6 +1927,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Handle and cap the outliers in the et0_fao_evapotranspiration (mm) column by setting upper and lower limits\n",
     "upper_limit = df['et0_fao_evapotranspiration (mm)'].mean() + 3*df['et0_fao_evapotranspiration (mm)'].std()\n",
     "lower_limit = df['et0_fao_evapotranspiration (mm)'].mean() - 3*df['et0_fao_evapotranspiration (mm)'].std()\n",
     "\n",
@@ -1970,6 +2002,7 @@
     }
    ],
    "source": [
+    "# Getting an overview of the data\n",
     "df['vapor_pressure_deficit (kPa)'].describe()"
    ]
   },
@@ -1991,6 +2024,7 @@
     }
    ],
    "source": [
+    "# Print the outliers, mean and standard deviation in the vapor_pressure_deficit (kPa)\n",
     "mean = np.mean(df['vapor_pressure_deficit (kPa)'])\n",
     "std = np.std(df['vapor_pressure_deficit (kPa)'])\n",
     " \n",
@@ -2011,6 +2045,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Handle and cap the outliers in the vapor_pressure_deficit (kPa) column by setting upper and lower limits\n",
     "upper_limit = df['vapor_pressure_deficit (kPa)'].mean() + 3*df['vapor_pressure_deficit (kPa)'].std()\n",
     "lower_limit = df['vapor_pressure_deficit (kPa)'].mean() - 3*df['vapor_pressure_deficit (kPa)'].std()\n",
     "\n",
@@ -2085,6 +2120,7 @@
     }
    ],
    "source": [
+    "# Getting an overview of the data\n",
     "df['windspeed_10m (km/h)'].describe()"
    ]
   },
@@ -2106,6 +2142,7 @@
     }
    ],
    "source": [
+    "# Print the outliers, mean and standard deviation in the windspeed_10m (km/h)\n",
     "mean = np.mean(df['windspeed_10m (km/h)'])\n",
     "std = np.std(df['windspeed_10m (km/h)'])\n",
     " \n",
@@ -2126,6 +2163,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Handle and cap the outliers in the windspeed_10m (km/h) column by setting upper and lower limits\n",
     "upper_limit = df['windspeed_10m (km/h)'].mean() + 3*df['windspeed_10m (km/h)'].std()\n",
     "lower_limit = df['windspeed_10m (km/h)'].mean() - 3*df['windspeed_10m (km/h)'].std()\n",
     "\n",
@@ -2200,6 +2238,7 @@
     }
    ],
    "source": [
+    "# Getting an overview of the data\n",
     "df['winddirection_10m (°)'].describe()"
    ]
   },
@@ -2221,6 +2260,7 @@
     }
    ],
    "source": [
+    "# Print the outliers, mean and standard deviation in the winddirection_10m (°)\n",
     "mean = np.mean(df['winddirection_10m (°)'])\n",
     "std = np.std(df['winddirection_10m (°)'])\n",
     " \n",
@@ -2267,6 +2307,7 @@
     }
    ],
    "source": [
+    "# Getting an overview of the data\n",
     "df['windgusts_10m (km/h)'].describe()"
    ]
   },
@@ -2288,6 +2329,7 @@
     }
    ],
    "source": [
+    "# Print the outliers, mean and standard deviation in the windgusts_10m (km/h)\n",
     "mean = np.mean(df['windgusts_10m (km/h)'])\n",
     "std = np.std(df['windgusts_10m (km/h)'])\n",
     " \n",
@@ -2308,6 +2350,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Handle and cap the outliers in the windgusts_10m (km/h) column by setting upper and lower limits\n",
     "upper_limit = df['windgusts_10m (km/h)'].mean() + 3*df['windgusts_10m (km/h)'].std()\n",
     "lower_limit = df['windgusts_10m (km/h)'].mean() - 3*df['windgusts_10m (km/h)'].std()\n",
     "\n",
@@ -2382,6 +2425,7 @@
     }
    ],
    "source": [
+    "# Getting an overview of the data\n",
     "df['soil_temperature_28_to_100cm (°C)'].describe()"
    ]
   },
@@ -2403,6 +2447,7 @@
     }
    ],
    "source": [
+    "# Print the outliers, mean and standard deviation in the soil_temperature_28_to_100cm (°C)\n",
     "mean = np.mean(df['soil_temperature_28_to_100cm (°C)'])\n",
     "std = np.std(df['soil_temperature_28_to_100cm (°C)'])\n",
     " \n",
@@ -2449,6 +2494,7 @@
     }
    ],
    "source": [
+    "# Getting an overview of the data\n",
     "df['soil_moisture_28_to_100cm (m³/m³)'].describe()"
    ]
   },
@@ -2470,6 +2516,7 @@
     }
    ],
    "source": [
+    "# Print the outliers, mean and standard deviation in the soil_moisture_28_to_100cm (m³/m³)\n",
     "mean = np.mean(df['soil_moisture_28_to_100cm (m³/m³)'])\n",
     "std = np.std(df['soil_moisture_28_to_100cm (m³/m³)'])\n",
     " \n",
@@ -2490,6 +2537,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Handle and cap the outliers in the soil_moisture_28_to_100cm (m³/m³) column by setting upper and lower limits\n",
     "upper_limit = df['soil_moisture_28_to_100cm (m³/m³)'].mean() + 3*df['soil_moisture_28_to_100cm (m³/m³)'].std()\n",
     "lower_limit = df['soil_moisture_28_to_100cm (m³/m³)'].mean() - 3*df['soil_moisture_28_to_100cm (m³/m³)'].std()\n",
     "\n",
@@ -2564,6 +2612,7 @@
     }
    ],
    "source": [
+    "# Getting an overview of the data\n",
     "df['direct_radiation (W/m²)'].describe()"
    ]
   },
@@ -2585,6 +2634,7 @@
     }
    ],
    "source": [
+    "# Print the outliers, mean and standard deviation in the direct_radiation (W/m²)\n",
     "mean = np.mean(df['direct_radiation (W/m²)'])\n",
     "std = np.std(df['direct_radiation (W/m²)'])\n",
     " \n",
@@ -2605,6 +2655,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Handle and cap the outliers in the direct_radiation (W/m²) column by setting upper and lower limits\n",
     "upper_limit = df['direct_radiation (W/m²)'].mean() + 3*df['direct_radiation (W/m²)'].std()\n",
     "lower_limit = df['direct_radiation (W/m²)'].mean() - 3*df['direct_radiation (W/m²)'].std()\n",
     "\n",
@@ -2679,6 +2730,7 @@
     }
    ],
    "source": [
+    "# Getting an overview of the data\n",
     "df['diffuse_radiation (W/m²)'].describe()"
    ]
   },
@@ -2700,6 +2752,7 @@
     }
    ],
    "source": [
+    "# Print the outliers, mean and standard deviation in the diffuse_radiation (W/m²)\n",
     "mean = np.mean(df['diffuse_radiation (W/m²)'])\n",
     "std = np.std(df['diffuse_radiation (W/m²)'])\n",
     " \n",
@@ -2720,6 +2773,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Handle and cap the outliers in the diffuse_radiation (W/m²) column by setting upper and lower limits\n",
     "upper_limit = df['diffuse_radiation (W/m²)'].mean() + 3*df['diffuse_radiation (W/m²)'].std()\n",
     "lower_limit = df['diffuse_radiation (W/m²)'].mean() - 3*df['diffuse_radiation (W/m²)'].std()\n",
     "\n",
@@ -3162,6 +3216,7 @@
     }
    ],
    "source": [
+    "# Remove columns in the dataframe\n",
     "df.drop(['winddirection_10m (°)', 'windspeed_10m (km/h)', 'windgusts_10m (km/h)'], axis=1)"
    ]
   },
@@ -3171,6 +3226,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Export DataFrame to a CSV\n",
     "df.to_csv('Without_Outliers.csv')"
    ]
   },
@@ -4818,6 +4874,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Calculate VIF\n",
     "from statsmodels.stats.outliers_influence import variance_inflation_factor\n",
     "x = df1.drop('Yield (mt/ha)', axis=1)\n",
     "y = df1['Yield (mt/ha)']"
