updated with comments

--- a/historical-data-hourly-to-annual.ipynb
+++ b/historical-data-hourly-to-annual.ipynb
@@ -129,6 +129,7 @@
     }
    ],
    "source": [
+    "# Concatenate the dataframes into a single dataframe\n",
     "frames = [zamboanga_norte_annual, zamboanga_sur_annual, zamboanga_sibugay_annual,\n",
     "        zamboanga_city_annual, bukidnon_annual,camiguin_annual, lanao_del_norte_annual,\n",
     "        misamis_occidental_annual, misamis_oriental_annual, davao_de_oro_annual,\n",
@@ -147,6 +148,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Rename the columns\n",
     "result.rename(columns = {'location':'Location'}, inplace = True)\n",
     "result.rename(columns = {'year':'Year'}, inplace = True)"
    ]
@@ -182,6 +184,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Replace the long names of varioud regions/locations with standardized names\n",
     "result['Location'] = result['Location'].replace(['Zamboanga del Norte', ' Zamboanga del Sur', ' Zamboanga Sibugay', ' Zamboanga City', \n",
     "                                                ' Bukidnon', ' Camiguin', ' Lanao del Norte', ' Misamis Occidental', ' Misamis Oriental',\n",
     "                                                ' Davao de Oro', ' Davao del Norte', ' Davao del Sur', ' Davao Occidental', ' Davao Oriental',\n",
@@ -595,6 +598,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Read data from CSV\n",
     "zamboanga_norte = pd.read_csv(r\"csv-files/Region 9 - Zamboanga del Norte.csv\", header = 2)"
    ]
   },
@@ -604,6 +608,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Convert time column to datetime format\n",
     "zamboanga_norte['time'] = pd.to_datetime(zamboanga_norte['time'])"
    ]
   },
@@ -613,6 +618,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Extract the year from datetime column and create new column\n",
     "zamboanga_norte['year'] = zamboanga_norte['time'].dt.year"
    ]
   },
@@ -1009,6 +1015,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Calculate the mean for each year\n",
     "zamboanga_norte_annual = zamboanga_norte.groupby(\"year\")[['temperature_2m (°C)', 'relativehumidity_2m (%)',\n",
     "       'dewpoint_2m (°C)', 'rain (mm)',\n",
     "       'surface_pressure (hPa)', 'cloudcover (%)',\n",
@@ -1025,6 +1032,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Adding new column that represents the most frequent value for each year\n",
     "zamboanga_norte_annual['weathercode (wmo code)'] = zamboanga_norte.groupby(['year'])['weathercode (wmo code)'].agg(pd.Series.mode)"
    ]
   },
@@ -1034,6 +1042,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Adding a new column \n",
     "zamboanga_norte_annual['location'] = 'Zamboanga del Norte'"
    ]
   },
@@ -1043,6 +1052,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Selecting and rearranging columns\n",
     "zamboanga_norte_annual = zamboanga_norte_annual.loc[:,['location', 'weathercode (wmo code)', 'temperature_2m (°C)', 'relativehumidity_2m (%)',\n",
     "       'dewpoint_2m (°C)', 'rain (mm)',\n",
     "       'surface_pressure (hPa)', 'cloudcover (%)',\n",
