updated with comments

--- a/Merged-Data.ipynb
+++ b/Merged-Data.ipynb
@@ -6,6 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Import libraries\n",
     "import pandas as pd\n",
     "import datetime as dt"
    ]
@@ -16,6 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Read the CSV files\n",
     "weather_data = pd.read_csv(r\"C:\\Users\\arian\\Documents\\THESIS 2\\Merged Historical Weather Annual Data.csv\")\n",
     "yield_data = pd.read_csv(r\"C:\\Users\\arian\\Documents\\THESIS 2\\Yield Data Final.csv\")"
    ]
@@ -37,6 +39,7 @@
     }
    ],
    "source": [
+    "# Number of rows and columns of yield data\n",
     "yield_data.shape"
    ]
   },
@@ -57,6 +60,7 @@
     }
    ],
    "source": [
+    "# Number of rows and columns of weather data\n",
     "weather_data.shape"
    ]
   },
@@ -66,6 +70,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Grouped the yield data by the Location column\n",
     "grp = yield_data.groupby('Location')"
    ]
   },
@@ -112,6 +117,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Concatenate multiple DataFrames into a single DataFrame\n",
     "yield_data=pd.concat([ZAMBOANGA_DEL_NORTE,ZAMBOANGA_DEL_SUR, ZAMBOANGA_SIBUGAY, CITY_OF_ZAMBOANGA, BUKIDNON, CAMIGUIN, LANAO_DEL_NORTE, MISAMIS_OCCIDENTAL, MISAMIS_ORIENTAL, DAVAO_DE_ORO, DAVAO_DEL_NORTE, DAVAO_DEL_SUR, DAVAO_OCCIDENTAL, DAVAO_ORIENTAL, CITY_OF_DAVAO, COTABATO, SARANGANI, SULTAN_KUDARAT, SOUTH_COTABATO, AGUSAN_DEL_NORTE, AGUSAN_DEL_SUR, DINAGAT_ISLANDS, SURIGAO_DEL_NORTE, SURIGAO_DEL_SUR, BASILAN, LANAO_DEL_SUR, MAGUINDANAO, SULU, TAWI_TAWI],ignore_index = True)"
    ]
   },
@@ -121,6 +127,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Removing the Unnamed column\n",
     "yield_data = yield_data.drop(['Unnamed: 0'],axis = 1)"
    ]
   },
@@ -130,6 +137,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Replacing the 'year' to 'Year'\n",
     "weather_data.rename(columns = {'year':\"Year\"},inplace=True)"
    ]
   },
@@ -154,6 +162,7 @@
     }
    ],
    "source": [
+    "# Identify and print the unique values\n",
     "list_1 = weather_data['Location'].unique()\n",
     "list_2 = yield_data['Location'].unique()\n",
     "list_1.sort()\n",
