updated with comments

--- a/mlr.ipynb
+++ b/mlr.ipynb
@@ -6,6 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Importing libraries\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -192,6 +193,7 @@
     }
    ],
    "source": [
+    "# Dropping Unnamed columns\n",
     "df1 = df1.drop(\"Unnamed: 0\", axis=1)\n",
     "df1"
    ]
@@ -214,6 +216,7 @@
     }
    ],
    "source": [
+    "# Splitting a DataFrame into two parts\n",
     "x = df1.drop('Yield (mt/ha)', 1)\n",
     "y = df1['Yield (mt/ha)']"
    ]
@@ -224,6 +227,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Split data into training and testing sets\n",
     "from sklearn.model_selection import train_test_split\n",
     "X_train, X_test, y_train, y_test = train_test_split(x, y, test_size = 0.3, \n",
     "                 random_state = 100) "
@@ -255,6 +259,7 @@
     }
    ],
    "source": [
+    "# Train the model on the training data\n",
     "mlr.fit(X_train, y_train)"
    ]
   },
@@ -286,6 +291,7 @@
     }
    ],
    "source": [
+    "# Show intercept and coefficients of mlr\n",
     "print(\"Intercept: \", mlr.intercept_)\n",
     "print(\"Coefficients:\")\n",
     "list(zip(x, mlr.coef_))"
@@ -445,6 +451,7 @@
     }
    ],
    "source": [
+    "#Dropping the unnamed columns\n",
     "df2 = df2.drop(\"Unnamed: 0\", axis=1)\n",
     "df2"
    ]
@@ -464,6 +471,7 @@
     }
    ],
    "source": [
+    "# Splitting the data into two parts\n",
     "x = df2.drop('Yield (mt/ha)', 1)\n",
     "y = df2['Yield (mt/ha)']"
    ]
@@ -474,6 +482,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Split data into training and testing sets\n",
     "from sklearn.model_selection import train_test_split\n",
     "X_train, X_test, y_train, y_test = train_test_split(x, y, test_size = 0.3, \n",
     "                 random_state = 100) "
