--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -5009,6 +5009,7 @@
     }
    ],
    "source": [
+    "# Calculate VIF using the features in x\n",
     "def cal_vif(x):\n",
     "    thresh = 5\n",
     "    output = pd.DataFrame()\n",
@@ -5171,6 +5172,7 @@
     }
    ],
    "source": [
+    "# Creating a new DataFrame with the selected subset of columns\n",
     "vif = df1.loc[:, ['weathercode (wmo code)', 'rain (mm)', 'windspeed_10m (km/h)', 'Yield (mt/ha)']]\n",
     "vif"
    ]
@@ -5205,6 +5207,7 @@
     }
    ],
    "source": [
+    "# Importing libraries\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.ensemble import RandomForestRegressor\n",
     "from sklearn.inspection import permutation_importance\n",
@@ -5217,6 +5220,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Split dataset into training and testing sets\n",
     "X = df1.drop('Yield (mt/ha)', axis=1)\n",
     "y = df1['Yield (mt/ha)']\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.25, random_state=12)"
@@ -5239,6 +5243,7 @@
     }
    ],
    "source": [
+    "# Initialize a RFR with 100 decision trees\n",
     "rf = RandomForestRegressor(n_estimators=100)\n",
     "rf.fit(X_train, y_train)"
    ]
@@ -5263,6 +5268,7 @@
     }
    ],
    "source": [
+    "# Measure how much a feature contributes to the model\n",
     "rf.feature_importances_"
    ]
   },
@@ -5293,6 +5299,7 @@
     }
    ],
    "source": [
+    "# Visualize the feature importances\n",
     "sorted_idx = rf.feature_importances_.argsort()\n",
     "plt.barh(df1.columns[sorted_idx], rf.feature_importances_[sorted_idx])\n",
     "plt.xlabel(\"Random Forest Feature Importance\")"
@@ -5489,6 +5496,7 @@
     }
    ],
    "source": [
+    "# Create new DataFrame to be used for modeling\n",
     "randomForest = df1.loc[:, ['rain (mm)', 'dewpoint_2m (°C)', 'relativehumidity_2m (%)', 'soil_temperature_28_to_100cm (°C)','Yield (mt/ha)']]\n",
     "randomForest"
    ]
@@ -5515,6 +5523,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Importing libraries for Sequential Feature Selction\n",
     "from sklearn.feature_selection import SequentialFeatureSelector\n",
     "from sklearn.naive_bayes import GaussianNB"
    ]
@@ -5525,6 +5534,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Splitting dataset into training and testing sets\n",
     "X = df1.iloc[:, 1:]\n",
     "y = df1.iloc[:, 0]\n",
     "\n",
@@ -42042,6 +42052,7 @@
     }
    ],
    "source": [
+    "# Selecting top four features \n",
     "selector = SequentialFeatureSelector(GaussianNB() ,n_features_to_select=4, direction='forward', scoring=\"roc_auc\", cv=5)\n",
     "\n",
     "selector.fit_transform(X_train,y_train)"
@@ -42086,6 +42097,7 @@
     }
    ],
    "source": [
+    "# Extracting the names of the selected features\n",
     "feature_names = np.array(df1.drop('Yield (mt/ha)',axis=1).columns.tolist())\n",
     "feature_names[selector.get_support()]"
    ]
@@ -42253,6 +42265,7 @@
     }
    ],
    "source": [
+    "# Create new DataFrame to be used for modeling\n",
     "SFF = df1.loc[:, ['weathercode (wmo code)', 'temperature_2m (°C)', 'relativehumidity_2m (%)', 'dewpoint_2m (°C)','Yield (mt/ha)']]\n",
     "SFF"
    ]
