rename csv files

--- a/Merged-Data.ipynb
+++ b/Merged-Data.ipynb
@@ -18,8 +18,8 @@
    "outputs": [],
    "source": [
     "# Read the CSV files\n",
-    "weather_data = pd.read_csv(r\"C:\\Users\\arian\\Documents\\THESIS 2\\Merged Historical Weather Annual Data.csv\")\n",
-    "yield_data = pd.read_csv(r\"C:\\Users\\arian\\Documents\\THESIS 2\\Yield Data Final.csv\")"
+    "weather_data = pd.read_csv(r\"Merged Historical Weather Annual Data.csv\")\n",
+    "yield_data = pd.read_csv(r\"Yield Data Final.csv\")"
    ]
   },
   {
