modified the parameter names for easy usage

--- a/ANN Modelling.ipynb
+++ b/ANN Modelling.ipynb
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -99,23 +99,23 @@
        "      <th>Year</th>\n",
        "      <th>Location</th>\n",
        "      <th>Wind_Direction</th>\n",
-       "      <th>Wind_Speed_(km/h)</th>\n",
-       "      <th>temperature_2m (°C)</th>\n",
-       "      <th>relativehumidity_2m (%)</th>\n",
-       "      <th>dewpoint_2m (°C)</th>\n",
-       "      <th>surface_pressure (hPa)</th>\n",
-       "      <th>et0_fao_evapotranspiration (mm)</th>\n",
+       "      <th>Wind_Speed</th>\n",
+       "      <th>temperature_2m</th>\n",
+       "      <th>relativehumidity_2m</th>\n",
+       "      <th>dewpoint_2m</th>\n",
+       "      <th>surface_pressure</th>\n",
+       "      <th>et0_fao_evapotranspiration</th>\n",
        "      <th>...</th>\n",
-       "      <th>soil_moisture_28_to_100cm (m³/m³)</th>\n",
-       "      <th>direct_radiation (W/m²)</th>\n",
-       "      <th>diffuse_radiation (W/m²)</th>\n",
-       "      <th>rain (mm)</th>\n",
-       "      <th>weathercode (wmo code)</th>\n",
-       "      <th>windgusts_10m (km/h)</th>\n",
-       "      <th>cloudcover (%)</th>\n",
-       "      <th>Production (mt)</th>\n",
-       "      <th>Area (ha)</th>\n",
-       "      <th>Yield (mt/ha)</th>\n",
+       "      <th>soil_moisture_28_to_100cm</th>\n",
+       "      <th>direct_radiation</th>\n",
+       "      <th>diffuse_radiation</th>\n",
+       "      <th>rain</th>\n",
+       "      <th>weathercode</th>\n",
+       "      <th>windgusts_10m</th>\n",
+       "      <th>cloudcover</th>\n",
+       "      <th>Production</th>\n",
+       "      <th>Area</th>\n",
+       "      <th>Yield</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -245,65 +245,78 @@
        "</div>"
       ],
       "text/plain": [
-       "   Unnamed: 0  Year          Location  Wind_Direction  Wind_Speed_(km/h)  \\\n",
-       "0           0  1990  AGUSAN DEL NORTE               6                4.1   \n",
-       "1           1  1991  AGUSAN DEL NORTE               8                3.1   \n",
-       "2           2  1992  AGUSAN DEL NORTE               8                3.1   \n",
-       "3           3  1993  AGUSAN DEL NORTE               8                3.6   \n",
-       "4           4  1994  AGUSAN DEL NORTE               6                3.6   \n",
+       "   Unnamed: 0  Year          Location  Wind_Direction  Wind_Speed  \\\n",
+       "0           0  1990  AGUSAN DEL NORTE               6         4.1   \n",
+       "1           1  1991  AGUSAN DEL NORTE               8         3.1   \n",
+       "2           2  1992  AGUSAN DEL NORTE               8         3.1   \n",
+       "3           3  1993  AGUSAN DEL NORTE               8         3.6   \n",
+       "4           4  1994  AGUSAN DEL NORTE               6         3.6   \n",
        "\n",
-       "   temperature_2m (°C)  relativehumidity_2m (%)  dewpoint_2m (°C)  \\\n",
-       "0                25.15                78.360000             20.88   \n",
-       "1                25.06                77.990000             20.73   \n",
-       "2                25.39                77.139973             20.11   \n",
-       "3                24.92                79.600000             20.94   \n",
-       "4                24.96                79.450000             20.96   \n",
+       "   temperature_2m  relativehumidity_2m  dewpoint_2m  surface_pressure  \\\n",
+       "0           25.15            78.360000        20.88            975.30   \n",
+       "1           25.06            77.990000        20.73            975.55   \n",
+       "2           25.39            77.139973        20.11            975.90   \n",
+       "3           24.92            79.600000        20.94            975.66   \n",
+       "4           24.96            79.450000        20.96            975.32   \n",
        "\n",
-       "   surface_pressure (hPa)  et0_fao_evapotranspiration (mm)  ...  \\\n",
-       "0                  975.30                             0.16  ...   \n",
-       "1                  975.55                             0.16  ...   \n",
-       "2                  975.90                             0.17  ...   \n",
-       "3                  975.66                             0.15  ...   \n",
-       "4                  975.32                             0.15  ...   \n",
+       "   et0_fao_evapotranspiration  ...  soil_moisture_28_to_100cm  \\\n",
+       "0                        0.16  ...                       0.28   \n",
+       "1                        0.16  ...                       0.27   \n",
+       "2                        0.17  ...                       0.21   \n",
+       "3                        0.15  ...                       0.28   \n",
+       "4                        0.15  ...                       0.29   \n",
        "\n",
-       "   soil_moisture_28_to_100cm (m³/m³)  direct_radiation (W/m²)  \\\n",
-       "0                               0.28                   140.02   \n",
-       "1                               0.27                   138.79   \n",
-       "2                               0.21                   144.62   \n",
-       "3                               0.28                   136.18   \n",
-       "4                               0.29                   137.68   \n",
+       "   direct_radiation  diffuse_radiation    rain  weathercode  windgusts_10m  \\\n",
+       "0            140.02              70.89  1701.0            1            9.4   \n",
+       "1            138.79              73.80  1634.2            1           11.5   \n",
+       "2            144.62              73.53  1433.2            1            7.9   \n",
+       "3            136.18              72.02  2017.8            1            8.3   \n",
+       "4            137.68              71.24  1722.0            1            8.6   \n",
        "\n",
-       "   diffuse_radiation (W/m²)  rain (mm)  weathercode (wmo code)  \\\n",
-       "0                     70.89     1701.0                       1   \n",
-       "1                     73.80     1634.2                       1   \n",
-       "2                     73.53     1433.2                       1   \n",
-       "3                     72.02     2017.8                       1   \n",
-       "4                     71.24     1722.0                       1   \n",
-       "\n",
-       "   windgusts_10m (km/h)  cloudcover (%)  Production (mt)  Area (ha)  \\\n",
-       "0                   9.4           100.0           226.68      200.0   \n",
-       "1                  11.5           100.0           231.68      204.0   \n",
-       "2                   7.9           100.0           219.08      199.0   \n",
-       "3                   8.3           100.0           231.47      203.0   \n",
-       "4                   8.6           100.0           238.09      208.0   \n",
-       "\n",
-       "   Yield (mt/ha)  \n",
-       "0       1.133400  \n",
-       "1       1.135686  \n",
-       "2       1.100905  \n",
-       "3       1.140246  \n",
-       "4       1.144663  \n",
+       "   cloudcover  Production   Area     Yield  \n",
+       "0       100.0      226.68  200.0  1.133400  \n",
+       "1       100.0      231.68  204.0  1.135686  \n",
+       "2       100.0      219.08  199.0  1.100905  \n",
+       "3       100.0      231.47  203.0  1.140246  \n",
+       "4       100.0      238.09  208.0  1.144663  \n",
        "\n",
        "[5 rows x 22 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "whole_data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Unnamed: 0', 'Year', 'Location', 'Wind_Direction', 'Wind_Speed',\n",
+       "       'temperature_2m', 'relativehumidity_2m', 'dewpoint_2m',\n",
+       "       'surface_pressure', 'et0_fao_evapotranspiration',\n",
+       "       'vapor_pressure_deficit', 'soil_temperature_28_to_100cm',\n",
+       "       'soil_moisture_28_to_100cm', 'direct_radiation', 'diffuse_radiation',\n",
+       "       'rain', 'weathercode', 'windgusts_10m', 'cloudcover', 'Production',\n",
+       "       'Area', 'Yield'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "whole_data.columns"
    ]
   },
   {
@@ -315,42 +328,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "#define target and predictors \n",
     "\n",
-    "X = whole_data[['weathercode (wmo code)', 'temperature_2m (°C)',\n",
-    "       'relativehumidity_2m (%)', 'dewpoint_2m (°C)', 'rain (mm)',\n",
-    "       'surface_pressure (hPa)', 'cloudcover (%)',\n",
-    "       'et0_fao_evapotranspiration (mm)', 'vapor_pressure_deficit (kPa)',\n",
-    "       'Wind_Direction', 'Wind_Speed_(km/h)', 'windgusts_10m (km/h)',\n",
-    "       'soil_temperature_28_to_100cm (°C)',\n",
-    "       'soil_moisture_28_to_100cm (m³/m³)', 'direct_radiation (W/m²)',\n",
-    "       'diffuse_radiation (W/m²)']]"
+    "X = whole_data[['weathercode', 'temperature_2m',\n",
+    "       'relativehumidity_2m', 'dewpoint_2m', 'rain',\n",
+    "       'surface_pressure', 'cloudcover',\n",
+    "       'et0_fao_evapotranspiration', 'vapor_pressure_deficit',\n",
+    "       'Wind_Direction', 'Wind_Speed', 'windgusts_10m',\n",
+    "       'soil_temperature_28_to_100cm',\n",
+    "       'soil_moisture_28_to_100cm', 'direct_radiation',\n",
+    "       'diffuse_radiation']]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index(['weathercode (wmo code)', 'temperature_2m (°C)',\n",
-       "       'relativehumidity_2m (%)', 'dewpoint_2m (°C)', 'rain (mm)',\n",
-       "       'surface_pressure (hPa)', 'cloudcover (%)',\n",
-       "       'et0_fao_evapotranspiration (mm)', 'vapor_pressure_deficit (kPa)',\n",
-       "       'Wind_Direction', 'Wind_Speed_(km/h)', 'windgusts_10m (km/h)',\n",
-       "       'soil_temperature_28_to_100cm (°C)',\n",
-       "       'soil_moisture_28_to_100cm (m³/m³)', 'direct_radiation (W/m²)',\n",
-       "       'diffuse_radiation (W/m²)'],\n",
+       "Index(['weathercode', 'temperature_2m', 'relativehumidity_2m', 'dewpoint_2m',\n",
+       "       'rain', 'surface_pressure', 'cloudcover', 'et0_fao_evapotranspiration',\n",
+       "       'vapor_pressure_deficit', 'Wind_Direction', 'Wind_Speed',\n",
+       "       'windgusts_10m', 'soil_temperature_28_to_100cm',\n",
+       "       'soil_moisture_28_to_100cm', 'direct_radiation', 'diffuse_radiation'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
